--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 cache:
   bundler: false
   directories:
-  - .cache          # images.txt
+  - .build-cache          # images.txt
 # Handle git submodules yourself
 git:
     submodules: false
