--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+language: go
+go:
+  - 1.7
+  - master
 sudo: required
 services:
   - docker
@@ -12,7 +16,8 @@ git:
 # Do a github login using token
 before_install:
   - "echo -e \"machine github.com\n  login ${GITHUB_USER_TOKEN}\" >> ~/.netrc"
-script: 
+script:
+  - go test ./...
   - touch flogo-lib.tgz
   - tar cvfz flogo-lib.tgz --exclude=flogo-lib.tgz .
   - find . -not -name "flogo-lib.tgz" -not  -name "\." -not -name "\.\."  -print0 | xargs -0 rm -rf --
